@startuml

skinparam componentStyle uml2

package "'Paciente' Aggregate" <<Rectangle>> {
	class Paciente <<(A,#fffab8) Aggregate Root>> {
		String nome
		String cpf
		Date dataNascimento
		String telefone
		String emailContato
		String endereco
		Boolean ativo
		PacienteId pacienteId
	}
	class PacienteId <<(V,DarkSeaGreen) Value Object>> {
		Long id
	}
	class PacienteCadastrado <<(E,#ff9f4b) Domain Event>> {
		String nome
		String cpf
		PacienteId pacienteId
	}
	class PacienteAtualizado <<(E,#ff9f4b) Domain Event>> {
		String responsavel
		PacienteId pacienteId
	}
}
Paciente --> PacienteId : pacienteId
PacienteCadastrado --> PacienteId : pacienteId
PacienteAtualizado --> PacienteId : pacienteId
legend left
  This bounded context implements the subdomain 'PacienteDomain'.
end legend


@enduml
